--- a/stats/package.json
+++ b/stats/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^18.7.6",
     "concurrently": "^7.3.0",
     "nodemon": "^2.0.19"
   }
